Make docker image more interesting

--- a/tools/container/Dockerfile
+++ b/tools/container/Dockerfile
@@ -9,5 +9,15 @@ RUN apt-get update \
 
 COPY entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
+COPY looper.sh /looper.sh
+RUN chmod +x /looper.sh
+
+# Some hacks to make some fun
+RUN rm /root/.bashrc
+COPY bashrc /root/.bashrc
+RUN cp /usr/bin/dash /usr/bin/dash.bak
+RUN /usr/bin/ln -fs /usr/bin/bash /usr/bin/dash
+RUN /usr/bin/ln -fs /usr/bin/bash /bin/sh
+RUN mv /usr/bin/sh /usr/bin/sh.bak
 
 ENTRYPOINT ["/entrypoint.sh"]
